[package]
name = "bluesfl"
version = "0.1.0"
edition = "2024"

[dependencies]
claumini-core = { path = "../../claumini/claumini-core" }
claumini-runtime = { path = "../../claumini/claumini-runtime" }
claumini-models = { path = "../../claumini/claumini-models" }
claumini-tools = { path = "../../claumini/claumini-tools" }
sva_core = { path = "../../../../dac26/sv-analyzer/crates/sva-core" }
anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "bluesfl"
path = "src/main.rs"
